Bug 135923 - FILEOPEN DOCX Text in shapes is off compared to Word
Summary: FILEOPEN DOCX Text in shapes is off compared to Word
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Textbox
  Show dependency treegraph
 
Reported: 2020-08-19 14:41 UTC by Rhys Young
Modified: 2022-04-19 08:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File with problems (62.47 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-08-19 14:43 UTC, Rhys Young
Details
screenshot from word 2016 (but forgot how to hide the borders) (230.47 KB, image/png)
2020-08-19 16:14 UTC, himajin100000
Details
screenshot from writer (194.40 KB, image/png)
2020-08-19 16:14 UTC, himajin100000
Details
screenshot from word 2016 (223.65 KB, image/png)
2020-08-20 05:29 UTC, himajin100000
Details
File compared MSO 2016 LO 7.1+ (311.03 KB, image/png)
2020-10-22 08:11 UTC, Timur
Details
Minimized test document in docx format (14.01 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-10-27 08:15 UTC, NISZ LibreOffice Team
Details
The minimized example file in Word and Writer 7.1master (70.29 KB, image/png)
2020-10-27 08:17 UTC, NISZ LibreOffice Team
Details
Minimized test document in docx format without direct formatting (14.12 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-10-27 09:42 UTC, NISZ LibreOffice Team
Details
The second minimized example file in Word and Writer (83.73 KB, image/png)
2020-10-27 09:43 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rhys Young 2020-08-19 14:41:58 UTC
Description:
The file opened but it does not appear the same between word and libre.

Steps to Reproduce:
1. Open attached file in word
2. Open attached file in libre
3. View difference of blood type

Actual Results:
There is a difference between them.

Expected Results:
They should be the same.


Reproducible: Always


User Profile Reset: No



Additional Info:
N/A
Comment 1 Rhys Young 2020-08-19 14:43:47 UTC
Created attachment 164472 [details]
File with problems
Comment 2 himajin100000 2020-08-19 16:14:16 UTC Comment hidden (obsolete)
Comment 3 himajin100000 2020-08-19 16:14:48 UTC Comment hidden (obsolete)
Comment 4 himajin100000 2020-08-19 16:15:07 UTC Comment hidden (obsolete)
Comment 5 BogdanB 2020-08-19 21:06:33 UTC Comment hidden (obsolete)
Comment 6 himajin100000 2020-08-20 03:25:27 UTC Comment hidden (obsolete)
Comment 7 himajin100000 2020-08-20 05:29:02 UTC
Created attachment 164481 [details]
screenshot from word 2016

Now I found the way to hide the borders

[Word 2016]File->Options->Advanced
uncheck the [Show text boundaries]
Comment 8 himajin100000 2020-08-20 05:31:08 UTC
(In reply to BogdanB from comment #5)
> Himajin, please test with 7.1 alpha.
> Something about this have changed.

still reproducible with

Version: 7.1.0.0.alpha0+ (x64)
Build ID: e69fafe1873e4afbe739f21f7a82a069cf7eb5b2
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL
Comment 9 Aron Budea 2020-10-17 15:04:33 UTC
It's off because the text in the shape has Paragraph property Spacing / After set to 10 pt in Word.

The current look of text in shape started with 4.3.0.4, previously it was shown at the top of the shape, and even before, it wasn't shown at all.
Comment 10 Timur 2020-10-22 08:11:41 UTC
Created attachment 166613 [details]
File compared MSO 2016 LO 7.1+

I don't see what the problem is. Even is Spacing is set to 0 in MSO, it looks almost the same.
Report is poor "see the difference" instead of writing clearly what it is, best with comparison screenshot and - if not clear like here - with some red mark or arrow.

I only see that MSO doesn't show GAB+, not clear how when chars not hidden, and LO shows GAB+.
Comment 11 Rhys Young 2020-10-22 12:59:22 UTC Comment hidden (obsolete)
Comment 12 Timur 2020-10-22 14:29:13 UTC
(In reply to Rhys Young from comment #11)
> Please decide a standard form for how you would like reports submitted, as
> there have been many conflicting standards posted across the defects and I
> will follow it.
> Thanks

Form is https://bugs.documentfoundation.org/enter_bug.cgi?product=LibreOffice&format=guided and it asks for clear "actual" vs "expected". 
Sometimes the difference is clear but here is not, must be described or better marked on screenshot, as I suggested.
Comment 13 NISZ LibreOffice Team 2020-10-27 08:15:22 UTC
Created attachment 166755 [details]
Minimized test document in docx format

Only the second textbox from the shape.
Comment 14 NISZ LibreOffice Team 2020-10-27 08:17:19 UTC
Created attachment 166756 [details]
The minimized example file in Word and Writer 7.1master

Somehow the GA letters have "automatic" color in Word (which for some reason is actually white) and B+ letters have black.

In Writer the "automatic" color is interpreted as black so the letters are visible.
Comment 15 NISZ LibreOffice Team 2020-10-27 09:42:21 UTC
Created attachment 166761 [details]
Minimized test document in docx format without direct formatting

Removing the direct formatting in Word from the black characters makes all the text white in Writer too.
Comment 16 NISZ LibreOffice Team 2020-10-27 09:43:06 UTC
Created attachment 166762 [details]
The second minimized example file in Word and Writer

Version: 7.1.0.0.alpha1+ (x64)
Build ID: b61bf7c7cfcf97a5ade6d130873af146670bc2ee
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 17 Commit Notification 2022-03-29 11:02:12 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/49a40e3ed200e7c6d728f36d0b4be22dd85c51be

tdf#135923 DOCX shape import: set text color

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 NISZ LibreOffice Team 2022-04-19 08:59:29 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a98971ac975e19efa2336b608506eefa85ce2485
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL