tdf#135923 DOCX shape import: set text color

to the character color of the shape if it is not comes
from direct formatting.

Change-Id: I3f0a3e952b5449a6d92c5bb273d353a561f3e3dc